--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "daisyui": "^2.38.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
