--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "apollo-link-rest": "^0.9.0-rc.2",
     "daisyui": "^2.38.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "graphql": "^16.6.0",
+    "graphql-anywhere": "^4.2.8",
     "next": "13.0.1",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
