--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "next": "13.0.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
